--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -128,7 +128,7 @@
                             <div class="form-inline pl-3">
                                 <h4 class="text-success">
                                     <strong>
-                                        Quick States
+                                        Quick Stats
                                     </strong>
                                 </h4>
                                 <div class="form-group pl-3 pt-0 ">
