--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-dark sticky-top flex-md-nowrap p-0">
-    <a href="#" class="navbar-brand col-sm-3 text-center col-md-2 mr-0">
-        <h4> Meta Medias </h4>
+    <a href="/" class="navbar-brand col-sm-3 text-center col-md-2 mr-0">
+        <!-- <h4> Meta Medias </h4> -->
+        <img src="assets/images/logo-white.png" style="width: 100%;" alt="">
     </a>
     
     <div class="bmd-form-group bmd-collapse-inline pull-xs-right pr-3">
