--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,12 +1,14 @@
-<body data-gr-c-s-loaded="true" class="bg-light pt-5">
+<body data-gr-c-s-loaded="true" class="pt-5" style="background-color: #0069ff; background-image: linear-gradient(to right,#0079ff, #0069ff , #0079ff);">
     <div class="container pt-5">
-        <div class="col-md-6 offset-xl-3 mt-5">
-            <div class="card">
+        <div class="col-md-6 offset-xl-3 mt-4">
+            <div class="form-goup text-center">
+                <img src="assets/images/logo-white.png" style="width: 60%" alt="">
+            </div>
+            <div class="card mt-3">
                 <div class="card-body">
-                    <div class="form-group text-center mt-5">
-                        <h3 class="font-weight-bold text-dark">Log in and get to start </h3>
-                        <label for="" class="text-secondary">Welcome to our Meta Media</label>
-                        <hr>
+                    <div class="form-group text-center mt-3">
+                        <h2 class="font-weight-bold text-dark">Log in to Meta Medias </h2>
+                        <label for="" class="text-secondary mt-1">Welcome to Meta Medias</label>
                     </div>
 
                     <form action="/user/login" method="post" class="form-validation pl-lg-5 pr-lg-5">
@@ -37,16 +39,20 @@
                                 Sign in
                             </button>
                         </div>
+
+                        <div class="text-center form-goup font-weight-bold pl-5 pr-5">
+                            <label for="" style="line-height: 20pt !important;">
+                               <a href="#" class="text-info"> Forgot your password?</a>
+                            </label>
+                        </div>
                     </form>
                 </div>
-                <div class="card-footer bg-light">
-                    <div class="text-center mt-3 mb-3 text-secondary">
-                        <h6 class="mt-3">-------- &nbsp;New to Meta Media?&nbsp; --------</h6>
-                        <a href="/signup" class="mt-3 bg-white ml-auto p-2 pl-5 pr-5 text-success text-weight-bold btn btn-raised">
-                            Sign up
-                        </a>
-                    </div>
-                </div>
+            </div>
+            <div class="text-center text-white font-weight-bold mt-3" style="font-size: 18px;">
+                <label for="" >Don't you have an account?</label>
+                <a href="/signup" class="text-white">
+                    Signup
+                </a>
             </div>
         </div>
     </div>
