--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -1,12 +1,17 @@
-<body data-gr-c-s-loaded="true" class="bg-light pt-5">
+<body data-gr-c-s-loaded="true" class="pt-5" style="background-color: #0069ff; background-image: linear-gradient(to right,#0079ff, #0069ff , #0079ff);">
     <div class="container pt-5">
-        <div class="col-md-6 offset-xl-3 mt-5">
-            <div class="card">
+        
+        <div class="col-md-6 offset-xl-3 mt-4">
+            <div class="form-goup text-center">
+                <img src="assets/images/logo-white.png" style="width: 60%" alt="">
+            </div>
+
+            <div class="card mt-3">
                 <div class="card-body">
                     <div class="form-group text-center mt-5">
-                        <h3 class="font-weight-bold text-dark">
+                        <h2 class="font-weight-bold text-dark">
                             <strong>Sign up with code</strong>
-                        </h3>
+                        </h2>
                         <hr>
                     </div>
 
@@ -97,16 +102,21 @@
                                 Sign Up
                             </button>
                         </div>
+                        <div class="text-center form-goup text-secondary font-weight-bold pl-5 pr-5">
+                            <label for="" style="line-height: 20pt !important;">
+                                By signing up, you agree to the 
+                                <a href="#" class="text-info">Terms of Service</a> and 
+                                <a href="#" class="text-info">Privacy Policy</a>
+                            </label>
+                        </div>
                     </form>
                 </div>
-                <div class="card-footer bg-light">
-                    <div class="text-center mt-3 mb-3 text-secondary">
-                        <h6 class="mt-3">-------- &nbsp;If you have a account?&nbsp; --------</h6>
-                        <a href="/" class="mt-3 bg-white ml-auto p-2 pl-5 pr-5 text-success text-weight-bold btn btn-raised">
-                            Log in
-                        </a>
-                    </div>
-                </div>
+            </div>
+            <div class="text-center text-white font-weight-bold mt-3" style="font-size: 18px;">
+                <label for=""  >Already have an account?</label>
+                <a href="/" class="text-white">
+                    Signin
+                </a>
             </div>
         </div>
     </div>
