--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -2,65 +2,66 @@
     <div class="row">
         <nav class="col-md-2 d-none d-md-block bg-white sidebar">
             <div class="sidebar-sticky">
-                <div class="text-center text-info pt-3">
-                    <div class="list-group-item">
-                        <i class="material-icons text-info">
-                            chat
-                        </i>
-                        <h4><strong>DM Bot</strong></h4>
+                <nav id="sidebar" class="sidebar-wrapper">
+                    <div class="sidebar-content pl-1 pr-1">
+                        <div class="mt-3 sidebar-header "  style="cursor: pointer;">
+                            <div class="form-goup font-weight-bold mt-3 mb-5">
+                                <div class="header-menu text-center text-info">
+                                    <i class="fa fa-comments-o" style="font-size: 30px;"></i>
+                                    <label  style="font-size: 25px !important;" class="p-0 m-0 pl-2">IG DM Bots</label>
+                                </div>
+                            </div>
+                            <div class="user-pic">
+                                <img class="img-responsive img-rounded" src="https://raw.githubusercontent.com/azouaoui-med/pro-sidebar-template/gh-pages/src/img/user.jpg" alt="User picture">
+                            </div>
+                            <div class="user-info text-dark font-weight-bold">
+                                <span class="user-name">
+                                    <i class="far fa-address-book"></i> &nbsp;
+                                    <%= user.firstName%>
+                                    <strong>
+                                        <%= user.lastName%>
+                                    </strong>
+                                </span>
+                                <span class="user-role">
+                                    <i class="far fa-user"></i> &nbsp;
+                                    User
+                                </span>
+                                <span class="user-status">
+                                    <i class="fa fa-circle"></i>
+                                    <span>Online</span>
+                                </span>
+                            </div>
+                        </div>
+
+                        <div class="sidebar-menu">
+                            <ul class="font-weight-bold"><hr>
+                                <li class="header-menu text-secondary pl-3">
+                                    <i class="fa fa-cogs" style="font-size: 20px;"></i>
+                                    <label class="p-0 m-0 pl-1">General</label>
+                                </li>
+                                <li>
+                                    <a href="/dashboard">
+                                        <i class="fa fa-dashboard" style="font-size: 20px;"></i>
+                                        <label>Dashboard</label>
+                                        <span class="badge badge-pill badge-primary">TM</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="/allbots" >
+                                        <i class="fa fa-home" style="font-size: 20px;"></i>
+                                        <label>All Bots</label>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="connect">
+                                        <i class="fa fa-paw" style="font-size: 20px;"></i>
+                                        <label>Create Bot</label>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <ul class="list-group pl-3 navbar-nav">
-                    <li class="nav-item ">
-                        <hr>
-                        <a href="/dashboard" class="nav-link list-group-item">
-                            <i class="material-icons text-dark">
-                                dashboard
-                            </i>
-                            Dashboard
-                        </a>
-                    </li>
-
-                    <%# <li class="nav-item ">
-                        <hr>
-                        <a href="/profile" class="nav-link list-group-item">
-                            <i class="material-icons text-dark">
-                                account_circle
-                            </i>
-                            User profile
-                        </a>
-                    </li>  %>
-
-                    <li class="nav-item ">
-                        <hr>
-                        <a href="/allbots" class="nav-link list-group-item">
-                            <i class="material-icons text-dark">
-                                how_to_reg
-                            </i>
-                            All bots
-                        </a>
-                    </li>
-
-                    <li class="nav-item ">
-                        <hr>
-                        <a href="/connect" class="nav-link list-group-item">
-                            <i class="material-icons text-dark">
-                                pets
-                            </i>
-                            Connect bot
-                        </a>
-                    </li>
-                    
-                    <%# <li class="nav-item ">
-                        <hr>
-                        <a href="/" class="nav-link list-group-item">
-                            <i class="material-icons text-dark">
-                                textsms
-                            </i>
-                            Dialogs
-                        </a>
-                    </li> %>
-                </ul>
+                </nav>
             </div>
         </nav>
     </div>
