--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,6 +15,7 @@
     <link href="assets/stylesheets/font-awesome.min.css" rel="stylesheet">
     <link href="assets/stylesheets/owl.carousel.min.css" rel="stylesheet">
     <link href="assets/stylesheets/owl.theme.default.min.css" rel="stylesheet">
+    <link href="assets/stylesheets/mk-notifications.min.css" rel="stylesheet">
 
     <link href="app/css/custom-style.css" rel="stylesheet">
     <link href="app/css/style.css" rel="stylesheet">
