--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -7,6 +7,7 @@
 
 <!-- <script src="assets/javascripts/popper.min.js"></script> -->
 <!-- <script src="assets/javascripts/bootstrap.min.js"></script> -->
+<script src="assets/javascripts/mk-notifications.min.js"></script>
 <script src="assets/javascripts/owl.carousel.js"></script> 
 <script src="assets/javascripts/theme.js"></script>
 <script src="assets/javascripts/typewritter-effect.js"></script>
