--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,6 @@
-<footer class="bg-dark fixed-bottom">
-    <div class="form-group text-center pt-1">
-        <p class="text-light pt-2"> © 2018 - 2019 Meta Medias ® Global Inc.</p>
+<footer class="bg-light pl-lg-5">
+    <div class="form-group text-center pt-1 pl-lg-5">
+        <p class="text-dark pt-2 pl-lg-5"> © 2018 - 2019 Meta Medias ® Global Inc.</p>
     </div>
 </footer>
+<!-- fixed-bottom -->
