updated front-end (#007)

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -39,7 +39,7 @@
                     <i class="fa fa-youtube-square"></i>
                 </a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link text-white p-2" href="#">
                     <i class="fa fa-linkedin-square"></i>
                 </a>
@@ -48,7 +48,7 @@
                 <a class="nav-link text-white p-2" href="#">
                     <i class="fa fa-twitter"></i>
                 </a>
-            </li>
+            </li> -->
         </ul>
     </div>
 </nav>
