--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -11,9 +11,9 @@
                                     <label  style="font-size: 25px !important;" class="p-0 m-0 pl-2">IG DM Bots</label>
                                 </div>
                             </div>
-                            <div class="user-pic">
+                            <!-- <div class="user-pic">
                                 <img class="img-responsive img-rounded" src="https://raw.githubusercontent.com/azouaoui-med/pro-sidebar-template/gh-pages/src/img/user.jpg" alt="User picture">
-                            </div>
+                            </div> -->
                             <div class="user-info text-dark font-weight-bold">
                                 <span class="user-name">
                                     <i class="far fa-address-book"></i> &nbsp;
@@ -35,10 +35,10 @@
 
                         <div class="sidebar-menu">
                             <ul class="font-weight-bold"><hr>
-                                <li class="header-menu text-secondary pl-3">
+                                <!-- <li class="header-menu text-secondary pl-3">
                                     <i class="fa fa-cogs" style="font-size: 20px;"></i>
                                     <label class="p-0 m-0 pl-1">General</label>
-                                </li>
+                                </li> -->
                                 <li>
                                     <a href="/dashboard">
                                         <i class="fa fa-dashboard" style="font-size: 20px;"></i>
