--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -93,17 +93,30 @@
                                                     <span aria-hidden="true">×</span>
                                                 </button>
                                             </div>
-                                            <div class="modal-body offset-1 p-4" id="result">
-                                                <div class="pl-3 pr-3 pt-3 pb-3" style="background-color: transparent; border-radius: 25px;">
-                                                    <div class="form-group">
-                                                        <div class="content" id="chatContent">
-                
-                                                        </div>
+                                            <div class="modal-body" style="min-height: 380px; max-height: 750px; overflow: auto !important;" id="result">
+                                                <div class="row p-3">
+                                                    <div class="content" id="chatContent">
+                                                        <!-- input the text at there -->
                                                     </div>
                                                 </div>
                                             </div>
+                                            <div class="input-group mb-3 pl-5 pr-5">
+                                                <div class="input-group-prepend">
+                                                    <span class="input-group-text" id="basic-addon1">
+                                                        <a href="#" style="font-size: 20px;">
+                                                            <i class="fa fa-smile"></i>
+                                                        </a>
+                                                    </span>
+                                                </div>
+                                                <input type="text" class="form-control" placeholder="&nbsp; Type a message here" aria-label="Type a message here" aria-describedby="basic-addon1">
+                                                <div class="input-group-append">
+                                                    <button class="rounded-circle border-success btn btn-success" type="button">
+                                                        <i class="fa fa-send"></i>
+                                                    </button>
+                                                </div>
+                                            </div>
                                             <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">OK</button>
+                                                <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">OK</button> -->
                                             </div>
                                         </div>
                                     </div>
