--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -95,7 +95,7 @@
                                             </div>
                                             <div class="modal-body" style="min-height: 380px; max-height: 750px; overflow: auto !important;" id="result">
                                                 <div class="row p-3">
-                                                    <div class="content" id="chatContent">
+                                                    <div class="content" id="chatContent" style="width: 100% !important;">
                                                         <!-- input the text at there -->
                                                     </div>
                                                 </div>
