--- a/views/pages/allbots.ejs
+++ b/views/pages/allbots.ejs
@@ -47,7 +47,7 @@
             <% } %>
             <div class="row">
                 <% data.rows.forEach(function(bot) { %>
-                <div class="col-md-3 mt-3 mb-3 card-bots">
+                <div class="col-md-2 mt-3 mb-3 card-bots">
                     <div class="card">
                         <img src="assets/images/bot.jpg" class="card-img bot-img" alt="header-image">
                         <div class="card-img-overlay pr-2 pt-2">
@@ -74,11 +74,11 @@
                                 </button>
                             </div>
 
-                            <div class="form-group mb-0">
+                            <div class="form-group mb-0 pt-0">
                                 <div class="switch">
                                     <i class="fa fa-pause text-danger" style="font-size: 20px;"></i>
                                     <label>
-                                        <input class="ml-3 mr-3" type="checkbox" checked>
+                                        <input id="botOnOff" class="ml-3 mr-3" type="checkbox" checked>
                                         <i class="fa fa-play text-success" style="font-size: 20px;"></i>
                                     </label>
                                 </div>
