--- a/views/pages/createbot.ejs
+++ b/views/pages/createbot.ejs
@@ -431,7 +431,7 @@
                                             </div>
                                              
                                             <div class="col-md-6">
-                                                <form action="#" class="forms-sample">
+                                                <form action="#" class="forms-sample p-3">
                                                     <div class="form-group text-center">
                                                         <h2 class="mb-0">
                                                             <b>
