--- a/views/pages/auth/login.ejs
+++ b/views/pages/auth/login.ejs
@@ -8,11 +8,11 @@
                             <img src="assets/images/logo-white.png" width="75%" alt="">
                         </div>
                         <div class="auto-form-wrapper">
-                            <form action="#">
+                            <form action="/users/login" id="login" method="post" class="form-validation">
                                 <div class="form-group">
-                                    <label class="label">Username</label>
+                                    <label class="label">Email</label>
                                     <div class="input-group">
-                                        <input type="text" class="form-control" placeholder="Username">
+                                        <input type="email" id="email" class="form-control" placeholder="Email" autocomplete="on" autofocus required>
                                         <div class="input-group-append">
                                         <span class="input-group-text">
                                             <i class="mdi mdi-check-circle-outline"></i>
@@ -20,10 +20,11 @@
                                         </div>
                                     </div>
                                 </div>
+
                                 <div class="form-group">
                                     <label class="label">Password</label>
                                     <div class="input-group">
-                                        <input type="password" class="form-control" placeholder="*********">
+                                        <input type="password" id="password" class="form-control" placeholder="Password" autocomplete="on" required>
                                         <div class="input-group-append">
                                             <span class="input-group-text">
                                                 <i class="mdi mdi-check-circle-outline"></i>
@@ -31,29 +32,34 @@
                                         </div>
                                     </div>
                                 </div>
+                                
                                 <div class="form-group">
-                                    <button class="btn btn-primary submit-btn btn-block">
+                                    <button type="submit" class="btn btn-primary submit-btn btn-block">
                                         LOG IN
                                     </button>
                                 </div>
-                                <div class="form-group d-flex justify-content-between">
-                                    <div class="form-check form-check-flat mt-0">
-                                        <label class="form-check-label">
-                                        <input type="checkbox" class="form-check-input" checked> Keep me signed in </label>
-                                    </div>
-                                    <a href="#" class="text-small forgot-password text-black">Forgot Password</a>
-                                </div>
-                                <div class="form-group">
-                                    <button class="btn btn-block g-login">
-                                        <img class="mr-3" src="assets/images/file-icons/icon-google.svg" alt="">Log in with Google
-                                    </button>
-                                </div>
-                                <div class="text-block text-center my-3">
-                                    <span class="text-small font-weight-semibold">Not a member ?</span>
-                                    <a href="signup" class="text-black text-small">Create new account</a>
-                                </div>
                             </form>
+
+                            <div class="form-group d-flex justify-content-between">
+                                <div class="form-check form-check-flat mt-0">
+                                    <label class="form-check-label">
+                                    <input type="checkbox" class="form-check-input" checked> Keep me signed in </label>
+                                </div>
+                                <a href="#" class="text-small forgot-password text-black">Forgot Password</a>
+                            </div>
+                            
+                            <div class="form-group">
+                                <button class="btn btn-block g-login">
+                                    <img class="mr-3" src="assets/images/file-icons/icon-google.svg" alt="">Log in with Google
+                                </button>
+                            </div>
+
+                            <div class="text-block text-center my-3">
+                                <span class="text-small font-weight-semibold">Not a member ?</span>
+                                <a href="signup" class="text-black text-small">Create new account</a>
+                            </div>
                         </div>
+
                         <ul class="auth-footer">
                             <li>
                                 <a href="#">Conditions</a>
@@ -76,4 +82,6 @@
     <!-- container-scroller -->
 
     <% include ../../partials/_scripts %>
-  </body>
+
+    <script src="app/js/auth/login.js"></script>
+</body>
