--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -125,20 +125,20 @@
           </a>
         </div>
       </li>
+      
       <li class="nav-item dropdown d-none d-xl-inline-block user-dropdown">
         <a class="nav-link dropdown-toggle" id="UserDropdown" href="#" data-toggle="dropdown" aria-expanded="false">
           <img class="img-xs rounded-circle" src="assets/images/faces/face8.jpg" alt="Profile image"> </a>
         <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="UserDropdown">
           <div class="dropdown-header text-center">
             <img class="img-md rounded-circle" src="assets/images/faces/face8.jpg" alt="Profile image">
-            <p class="mb-1 mt-3 font-weight-semibold">Allen Moreno</p>
-            <p class="font-weight-light text-muted mb-0">allenmoreno@gmail.com</p>
+            <p class="mb-1 mt-3 font-weight-semibold"><%= user.firstName + ' ' + user.lastName %></p>
+            <p class="font-weight-light text-muted mb-0"><%= user.email %></p>
           </div>
           <a class="dropdown-item">My Profile <span class="badge badge-pill badge-danger">1</span><i class="dropdown-item-icon ti-dashboard"></i></a>
           <a class="dropdown-item">Messages<i class="dropdown-item-icon ti-comment-alt"></i></a>
           <a class="dropdown-item">Activity<i class="dropdown-item-icon ti-location-arrow"></i></a>
-          <a class="dropdown-item">FAQ<i class="dropdown-item-icon ti-help-alt"></i></a>
-          <a class="dropdown-item">Sign Out<i class="dropdown-item-icon ti-power-off"></i></a>
+          <a href="/logout" class="dropdown-item">Sign Out<i class="dropdown-item-icon ti-power-off"></i></a>
         </div>
       </li>
     </ul>
