--- a/views/partials/_scripts.ejs
+++ b/views/partials/_scripts.ejs
@@ -7,4 +7,5 @@
 <script src="assets/js/shared/misc.js"></script>
 <!-- endinject -->
 
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="assets/js/jquery.min.js"></script>
+<script src="app/js/mk-notifications.js"></script>
