--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -24,7 +24,8 @@
     <!-- endinject -->
     <!-- Layout styles -->
     <link rel="stylesheet" href="assets/css/demo/style.css">
-    <link rel="stylesheet" href="assets/css/shared/custom-style.css">
+    <link rel="stylesheet" href="app/css/mk-notifications.css">
+    <link rel="stylesheet" href="app/css/custom-style.css">
 
     <link rel="icon" href="assets/images/favicon/favicon.ico" type="image/x-icon">
 </head>
